Detect whether an app instance is a portal
"Detection" is based on the application using a specific ID
(specifically, "portal"). A CLI tool is provided to migrate
the database, as the Bootstrap used to generate a unique ID
for the application. For backwards compatibility, the app
instance ID is compared too as a fallback.

Change-Id: I5fcc5ae4c5cbd3b785b9f7a692fa261adf90b293

--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -207,3 +207,19 @@ tasks.register("extractMessagesFromTemplates", JavaExec) {
     }
   }
 }
+
+tasks.register("migratePortalAppId", JavaExec) {
+  dependsOn("classes")
+
+  main = "oasis.tools.MigratePortalAppId"
+  classpath = sourceSets.main.runtimeClasspath
+  systemProperties = System.getProperties().findAll { it.key.startsWith("oasis.") } \
+      + [ "oasis.conf-dir": "${buildDir}" ]
+  args = [
+      "-c", "${rootDir}/dev.conf",
+      "-l", "${rootDir}/log4j2-dev.xml",
+    ]
+  if (project.hasProperty("dryRun")) {
+    args("--dry-run")
+  }
+}
