--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ subprojects {
 
     tasks.withType(JavaCompile).configureEach {
       options.encoding = "UTF-8"
-      options.compilerArgs += [ "-Werror", "-Xlint:all", "-Xlint:-processing", "-Xlint:-serial", "-Xlint:-path" ]
+      options.compilerArgs += [ "-Xlint:all", "-Xlint:-processing", "-Xlint:-serial", "-Xlint:-path" ]
     }
 
     if (versionlessOutputs) {
